--- a/src/input.css
+++ b/src/input.css
@@ -35,8 +35,8 @@ img {
   top: 0px;
   left: 5px;
   display: block;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   background-image: url("../../src/icons/square.svg");
   background-repeat: no-repeat;
   background-size: contain;
@@ -94,8 +94,32 @@ img {
 }
 
 #home {
-  background-image: url("../../src/images/female.png");
+  clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 85%, 79% 92%, 51% 97%, 24% 92%, 0 84%, 0% 35%, 0 0);
+}
+
+.home__container {
+  max-width: 500px;
+  width: 100%;
+  height: 800px;
+  background-image: url("../../src/images/woman.png");
   background-repeat: no-repeat;
-  background-position: right 90px;
-  background-size: 900px;
+  background-position: center 0;
+  background-size: 700px;
+}
+
+@media screen and (max-width: 976px) {
+  #home {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+
+  .home__container {
+    background-position: center 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .home__container {
+    background-size: 500px;
+    height: 600px;
+  }
 }
