--- a/src/css/style.css
+++ b/src/css/style.css
@@ -641,6 +641,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-\[15px\]{
+  margin-bottom: 15px;
+}
+
 .mb-\[20px\]{
   margin-bottom: 20px;
 }
@@ -833,6 +837,11 @@ video {
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-\[12px\]{
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .px-\[30px\]{
@@ -1057,7 +1066,14 @@ img {
           clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 85%, 79% 92%, 51% 97%, 24% 92%, 0 84%, 0% 35%, 0 0);
 }
 
-.home__container {
+.home__line {
+  background-image: url("../../src/images/line.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.home__image {
   max-width: 500px;
   width: 100%;
   height: 800px;
@@ -1073,13 +1089,19 @@ img {
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
 
-  .home__container {
+  .home__image {
     background-position: center 0;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .home__line {
+    background-size: contain;
+  }
+}
+
 @media screen and (max-width: 480px) {
-  .home__container {
+  .home__image {
     background-size: 500px;
     height: 600px;
   }
@@ -1119,8 +1141,8 @@ img {
     left: 15%;
   }
 
-  .sm\:mb-\[30px\]{
-    margin-bottom: 30px;
+  .sm\:mb-\[25px\]{
+    margin-bottom: 25px;
   }
 
   .sm\:mb-\[50px\]{
