--- a/src/input.css
+++ b/src/input.css
@@ -97,7 +97,14 @@ img {
   clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 85%, 79% 92%, 51% 97%, 24% 92%, 0 84%, 0% 35%, 0 0);
 }
 
-.home__container {
+.home__line {
+  background-image: url("../../src/images/line.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.home__image {
   max-width: 500px;
   width: 100%;
   height: 800px;
@@ -112,13 +119,19 @@ img {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
 
-  .home__container {
+  .home__image {
     background-position: center 0;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .home__line {
+    background-size: contain;
+  }
+}
+
 @media screen and (max-width: 480px) {
-  .home__container {
+  .home__image {
     background-size: 500px;
     height: 600px;
   }
