--- a/src/css/style.css
+++ b/src/css/style.css
@@ -612,12 +612,20 @@ video {
   top: 0px;
 }
 
+.top-\[-18\%\]{
+  top: -18%;
+}
+
 .top-\[-300\%\]{
   top: -300%;
 }
 
 .top-\[45\%\]{
   top: 45%;
+}
+
+.top-\[50\%\]{
+  top: 50%;
 }
 
 .top-\[55\%\]{
@@ -641,16 +649,40 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-\[100px\]{
+  margin-bottom: 100px;
+}
+
 .mb-\[15px\]{
   margin-bottom: 15px;
+}
+
+.mb-\[160px\]{
+  margin-bottom: 160px;
+}
+
+.mb-\[17px\]{
+  margin-bottom: 17px;
 }
 
 .mb-\[20px\]{
   margin-bottom: 20px;
 }
 
+.mb-\[24px\]{
+  margin-bottom: 24px;
+}
+
 .mb-\[30px\]{
   margin-bottom: 30px;
+}
+
+.mb-\[40px\]{
+  margin-bottom: 40px;
+}
+
+.mb-\[80px\]{
+  margin-bottom: 80px;
 }
 
 .mr-\[15px\]{
@@ -665,6 +697,18 @@ video {
   margin-top: 100px;
 }
 
+.mt-\[50px\]{
+  margin-top: 50px;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -677,8 +721,36 @@ video {
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
+.h-\[250px\]{
+  height: 250px;
+}
+
+.h-\[30px\]{
+  height: 30px;
+}
+
 .h-\[50px\]{
   height: 50px;
+}
+
+.h-\[65px\]{
+  height: 65px;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.w-\[120px\]{
+  width: 120px;
+}
+
+.w-\[150px\]{
+  width: 150px;
 }
 
 .w-\[15px\]{
@@ -693,28 +765,60 @@ video {
   width: 20;
 }
 
+.w-\[20px\]{
+  width: 20px;
+}
+
 .w-\[250px\]{
   width: 250px;
+}
+
+.w-\[30px\]{
+  width: 30px;
 }
 
 .w-\[50px\]{
   width: 50px;
 }
 
-.w-\[60px\]{
-  width: 60px;
+.w-\[550px\]{
+  width: 550px;
+}
+
+.w-\[65px\]{
+  width: 65px;
 }
 
 .w-full{
   width: 100%;
 }
 
+.w-\[400px\]{
+  width: 400px;
+}
+
+.max-w-\[1000px\]{
+  max-width: 1000px;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
 .max-w-\[500px\]{
   max-width: 500px;
 }
 
+.max-w-\[620px\]{
+  max-width: 620px;
+}
+
 .max-w-\[750px\]{
   max-width: 750px;
+}
+
+.max-w-\[550px\]{
+  max-width: 550px;
 }
 
 .translate-x-\[-50\%\]{
@@ -722,8 +826,21 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[-50\%\]{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-start{
@@ -754,6 +871,14 @@ video {
   gap: 25px;
 }
 
+.gap-\[30px\]{
+  gap: 30px;
+}
+
+.gap-\[40px\]{
+  gap: 40px;
+}
+
 .rounded-\[20px\]{
   border-radius: 20px;
 }
@@ -770,6 +895,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .border-2{
   border-width: 2px;
 }
@@ -784,9 +913,29 @@ video {
   border-color: rgb(234 89 114 / var(--tw-border-opacity));
 }
 
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-\[\#23BDEE\]{
   --tw-bg-opacity: 1;
   background-color: rgb(35 189 238 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#29B9E7\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 185 231 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#5B72EE\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 114 238 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#EA5972\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 89 114 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F88C3D\]{
@@ -834,6 +983,10 @@ video {
   padding: 20px;
 }
 
+.p-5{
+  padding: 1.25rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -844,19 +997,19 @@ video {
   padding-right: 12px;
 }
 
+.px-\[20px\]{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .px-\[30px\]{
   padding-left: 30px;
   padding-right: 30px;
 }
 
-.px-\[35px\]{
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.py-\[11px\]{
-  padding-top: 11px;
-  padding-bottom: 11px;
+.py-\[16px\]{
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .py-\[18px\]{
@@ -874,20 +1027,20 @@ video {
   padding-bottom: 9px;
 }
 
-.pl-\[28px\]{
-  padding-left: 28px;
-}
-
-.pr-\[18px\]{
-  padding-right: 18px;
-}
-
 .pt-24{
   padding-top: 6rem;
 }
 
 .pt-\[120px\]{
   padding-top: 120px;
+}
+
+.pt-\[40px\]{
+  padding-top: 40px;
+}
+
+.pt-\[70px\]{
+  padding-top: 70px;
 }
 
 .text-center{
@@ -898,12 +1051,24 @@ video {
   font-size: 12px;
 }
 
+.text-\[14px\]{
+  font-size: 14px;
+}
+
 .text-\[15px\]{
   font-size: 15px;
 }
 
 .text-\[17px\]{
   font-size: 17px;
+}
+
+.text-\[18px\]{
+  font-size: 18px;
+}
+
+.text-\[20px\]{
+  font-size: 20px;
 }
 
 .text-\[30px\]{
@@ -922,12 +1087,13 @@ video {
   font-weight: 600;
 }
 
-.leading-\[160\%\]{
-  line-height: 160%;
-}
-
 .leading-\[45px\]{
   line-height: 45px;
+}
+
+.text-\[\#272727\]{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 39 / var(--tw-text-opacity));
 }
 
 .text-black{
@@ -948,6 +1114,22 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline{
+  text-decoration-line: underline;
+}
+
+.shadow-\[0_5px_25px_5px_rgba\(0\2c 0\2c 0\2c 0\.1\)\]{
+  --tw-shadow: 0 5px 25px 5px rgba(0,0,0,0.1);
+  --tw-shadow-colored: 0 5px 25px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[inset_0px_0px_2px_1px_rgba\(0\2c 0\2c 0\2c 1\)\]{
+  --tw-shadow: inset 0px 0px 2px 1px rgba(0,0,0,1);
+  --tw-shadow-colored: inset 0px 0px 2px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .duration-100{
@@ -989,6 +1171,28 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.section-title{
+  font-size: 34px;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.section-description{
+  font-size: 17px;
+  line-height: 160%;
+  --tw-text-opacity: 1;
+  color: rgb(70 70 70 / var(--tw-text-opacity));
+}
+
+.btn{
+  border-radius: 80px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .header-logo::before {
@@ -1083,7 +1287,21 @@ img {
   background-size: 700px;
 }
 
+.elearn__image {
+  background-image: url("../../src/images/square-blue.png"), url("../../src/images/square-red.png");
+  background-repeat: no-repeat;
+  background-position: left top, right bottom;
+}
+
 @media screen and (max-width: 976px) {
+  .section-title{
+    font-size: 30px;
+  }
+
+  .section-description{
+    font-size: 15px;
+  }
+
   #home {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
@@ -1092,9 +1310,21 @@ img {
   .home__image {
     background-position: center 0;
   }
+
+  .elearn__image {
+    background-size: 100px, 150px;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .section-title{
+    font-size: 28px;
+  }
+
+  .section-description{
+    font-size: 12px;
+  }
+
   .home__line {
     background-size: contain;
   }
@@ -1116,6 +1346,11 @@ img {
   background-color: transparent;
 }
 
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:text-black:hover{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1129,6 +1364,10 @@ img {
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:no-underline:hover{
+  text-decoration-line: none;
 }
 
 .focus\:outline-none:focus{
@@ -1173,6 +1412,10 @@ img {
     width: 50px;
   }
 
+  .sm\:w-\[400px\]{
+    width: 400px;
+  }
+
   .sm\:flex-row{
     flex-direction: row;
   }
@@ -1181,8 +1424,8 @@ img {
     font-size: 15px;
   }
 
-  .sm\:text-\[18px\]{
-    font-size: 18px;
+  .sm\:text-\[25px\]{
+    font-size: 25px;
   }
 
   .sm\:text-\[40px\]{
@@ -1199,8 +1442,20 @@ img {
     left: 0px;
   }
 
+  .md\:top-\[-12\%\]{
+    top: -12%;
+  }
+
   .md\:mb-0{
     margin-bottom: 0px;
+  }
+
+  .md\:mb-\[148px\]{
+    margin-bottom: 148px;
+  }
+
+  .md\:mb-\[150px\]{
+    margin-bottom: 150px;
   }
 
   .md\:mr-5{
@@ -1211,13 +1466,37 @@ img {
     margin-right: 30px;
   }
 
+  .md\:mb-\[100px\]{
+    margin-bottom: 100px;
+  }
+
+  .md\:mb-\[160px\]{
+    margin-bottom: 160px;
+  }
+
   .md\:hidden{
     display: none;
+  }
+
+  .md\:h-\[80px\]{
+    height: 80px;
+  }
+
+  .md\:w-\[150px\]{
+    width: 150px;
+  }
+
+  .md\:w-\[80px\]{
+    width: 80px;
   }
 
   .md\:translate-x-0{
     --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -1228,29 +1507,28 @@ img {
     gap: 25px;
   }
 
-  .md\:px-\[35px\]{
-    padding-left: 35px;
-    padding-right: 35px;
+  .md\:gap-\[60px\]{
+    gap: 60px;
   }
 
   .md\:pt-\[180px\]{
     padding-top: 180px;
   }
 
+  .md\:text-left{
+    text-align: left;
+  }
+
   .md\:text-\[15px\]{
     font-size: 15px;
   }
 
-  .md\:text-\[16px\]{
-    font-size: 16px;
-  }
-
-  .md\:text-\[18px\]{
-    font-size: 18px;
-  }
-
   .md\:text-\[20px\]{
     font-size: 20px;
+  }
+
+  .md\:text-\[22px\]{
+    font-size: 22px;
   }
 
   .md\:text-\[60px\]{
@@ -1267,6 +1545,26 @@ img {
     margin-right: 50px;
   }
 
+  .lg\:h-\[350px\]{
+    height: 350px;
+  }
+
+  .lg\:w-\[220px\]{
+    width: 220px;
+  }
+
+  .lg\:w-\[500px\]{
+    width: 500px;
+  }
+
+  .lg\:max-w-\[500px\]{
+    max-width: 500px;
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:gap-\[30px\]{
     gap: 30px;
   }
@@ -1275,14 +1573,12 @@ img {
     gap: 50px;
   }
 
-  .lg\:px-\[45px\]{
-    padding-left: 45px;
-    padding-right: 45px;
+  .lg\:p-6{
+    padding: 1.5rem;
   }
 
-  .lg\:py-\[9px\]{
-    padding-top: 9px;
-    padding-bottom: 9px;
+  .lg\:text-\[18px\]{
+    font-size: 18px;
   }
 }
 
@@ -1316,7 +1612,15 @@ img {
     justify-content: flex-start;
   }
 
+  .xl\:p-\[50px\]{
+    padding: 50px;
+  }
+
   .xl\:text-left{
     text-align: left;
+  }
+
+  .xl\:text-\[30px\]{
+    font-size: 30px;
   }
 }
