--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,6 +604,10 @@ video {
   left: 50%;
 }
 
+.right-0{
+  right: 0px;
+}
+
 .right-\[20px\]{
   right: 20px;
 }
@@ -636,6 +640,10 @@ video {
   top: 67%;
 }
 
+.top-\[75\%\]{
+  top: 75%;
+}
+
 .z-20{
   z-index: 20;
 }
@@ -643,6 +651,10 @@ video {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-5{
@@ -653,12 +665,12 @@ video {
   margin-bottom: 100px;
 }
 
-.mb-\[15px\]{
-  margin-bottom: 15px;
+.mb-\[12px\]{
+  margin-bottom: 12px;
 }
 
-.mb-\[160px\]{
-  margin-bottom: 160px;
+.mb-\[15px\]{
+  margin-bottom: 15px;
 }
 
 .mb-\[17px\]{
@@ -685,6 +697,18 @@ video {
   margin-bottom: 80px;
 }
 
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mr-\[100px\]{
+  margin-right: 100px;
+}
+
 .mr-\[15px\]{
   margin-right: 15px;
 }
@@ -701,12 +725,16 @@ video {
   margin-top: 50px;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
+.mb-\[50px\]{
+  margin-bottom: 50px;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
+.mb-\[60px\]{
+  margin-bottom: 60px;
+}
+
+.ml-0{
+  margin-left: 0px;
 }
 
 .block{
@@ -723,6 +751,14 @@ video {
 
 .grid{
   display: grid;
+}
+
+.h-\[18px\]{
+  height: 18px;
+}
+
+.h-\[20px\]{
+  height: 20px;
 }
 
 .h-\[250px\]{
@@ -757,6 +793,10 @@ video {
   width: 15px;
 }
 
+.w-\[18px\]{
+  width: 18px;
+}
+
 .w-\[200px\]{
   width: 200px;
 }
@@ -777,12 +817,20 @@ video {
   width: 30px;
 }
 
+.w-\[350px\]{
+  width: 350px;
+}
+
+.w-\[400px\]{
+  width: 400px;
+}
+
 .w-\[50px\]{
   width: 50px;
 }
 
-.w-\[550px\]{
-  width: 550px;
+.w-\[63px\]{
+  width: 63px;
 }
 
 .w-\[65px\]{
@@ -793,32 +841,44 @@ video {
   width: 100%;
 }
 
-.w-\[400px\]{
-  width: 400px;
+.w-\[35px\]{
+  width: 35px;
+}
+
+.w-\[40px\]{
+  width: 40px;
 }
 
 .max-w-\[1000px\]{
   max-width: 1000px;
 }
 
-.max-w-\[400px\]{
-  max-width: 400px;
-}
-
 .max-w-\[500px\]{
   max-width: 500px;
+}
+
+.max-w-\[550px\]{
+  max-width: 550px;
 }
 
 .max-w-\[620px\]{
   max-width: 620px;
 }
 
+.max-w-\[700px\]{
+  max-width: 700px;
+}
+
 .max-w-\[750px\]{
   max-width: 750px;
 }
 
-.max-w-\[550px\]{
-  max-width: 550px;
+.max-w-\[90\%\]{
+  max-width: 90%;
+}
+
+.max-w-full{
+  max-width: 100%;
 }
 
 .translate-x-\[-50\%\]{
@@ -839,6 +899,10 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse{
+  flex-direction: column-reverse;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
 }
@@ -849,6 +913,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -903,6 +971,32 @@ video {
   border-width: 2px;
 }
 
+.border-\[8px\]{
+  border-width: 8px;
+}
+
+.border-l-8{
+  border-left-width: 8px;
+}
+
+.border-l-\[1px\]{
+  border-left-width: 1px;
+}
+
+.border-\[\#BDBDD1\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(189 189 209 / var(--tw-border-opacity));
+}
+
+.border-\[\#CD356F\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(205 53 111 / var(--tw-border-opacity));
+}
+
+.border-\[rgba\(180\2c 180\2c 180\2c 0\.5\)\]{
+  border-color: rgba(180,180,180,0.5);
+}
+
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -911,6 +1005,11 @@ video {
 .border-brightRed{
   --tw-border-opacity: 1;
   border-color: rgb(234 89 114 / var(--tw-border-opacity));
+}
+
+.border-brightRedLight{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 141 179 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -983,10 +1082,6 @@ video {
   padding: 20px;
 }
 
-.p-5{
-  padding: 1.25rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -995,6 +1090,11 @@ video {
 .px-\[12px\]{
   padding-left: 12px;
   padding-right: 12px;
+}
+
+.px-\[15px\]{
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .px-\[20px\]{
@@ -1027,6 +1127,24 @@ video {
   padding-bottom: 9px;
 }
 
+.py-\[15px\]{
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.pl-\[20px\]{
+  padding-left: 20px;
+}
+
+.pr-\[80px\]{
+  padding-right: 80px;
+}
+
 .pt-24{
   padding-top: 6rem;
 }
@@ -1043,12 +1161,28 @@ video {
   padding-top: 70px;
 }
 
+.pr-\[60px\]{
+  padding-right: 60px;
+}
+
+.pr-\[50px\]{
+  padding-right: 50px;
+}
+
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
 }
 
 .text-\[12px\]{
   font-size: 12px;
+}
+
+.text-\[13px\]{
+  font-size: 13px;
 }
 
 .text-\[14px\]{
@@ -1075,6 +1209,10 @@ video {
   font-size: 30px;
 }
 
+.text-\[10px\]{
+  font-size: 10px;
+}
+
 .font-medium{
   font-weight: 500;
 }
@@ -1087,6 +1225,10 @@ video {
   font-weight: 600;
 }
 
+.font-bold{
+  font-weight: 700;
+}
+
 .leading-\[45px\]{
   line-height: 45px;
 }
@@ -1096,9 +1238,24 @@ video {
   color: rgb(39 39 39 / var(--tw-text-opacity));
 }
 
+.text-\[\#484848\]{
+  --tw-text-opacity: 1;
+  color: rgb(72 72 72 / var(--tw-text-opacity));
+}
+
+.text-\[\#5F5F7E\]{
+  --tw-text-opacity: 1;
+  color: rgb(95 95 126 / var(--tw-text-opacity));
+}
+
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-brightRedLight{
+  --tw-text-opacity: 1;
+  color: rgb(239 141 179 / var(--tw-text-opacity));
 }
 
 .text-descriptionColor{
@@ -1129,6 +1286,24 @@ video {
 .shadow-\[inset_0px_0px_2px_1px_rgba\(0\2c 0\2c 0\2c 1\)\]{
   --tw-shadow: inset 0px 0px 2px 1px rgba(0,0,0,1);
   --tw-shadow-colored: inset 0px 0px 2px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1291,6 +1466,49 @@ img {
   background-image: url("../../src/images/square-blue.png"), url("../../src/images/square-red.png");
   background-repeat: no-repeat;
   background-position: left top, right bottom;
+  background-size: 100px, 180px;
+}
+
+.feature__title {
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.feature__subtitle{
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(239 141 179 / var(--tw-text-opacity));
+}
+
+.feature__subtitle::before {
+  content: "";
+  margin-right: 1.25rem;
+  display: block;
+  height: 1px;
+  width: 60px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 141 179 / var(--tw-bg-opacity))
+}
+
+.feature__link{
+  display: block;
+  width: 200px;
+  border-radius: 80px;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(239 141 179 / var(--tw-border-opacity));
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(239 141 179 / var(--tw-text-opacity));
+}
+
+.testimonial:hover svg path {
+  fill: #fff;
 }
 
 @media screen and (max-width: 976px) {
@@ -1314,6 +1532,17 @@ img {
   .elearn__image {
     background-size: 100px, 150px;
   }
+
+  .feature__title {
+    font-size: 18px;
+  }
+
+  .feature__link{
+    width: 170px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 15px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1328,6 +1557,10 @@ img {
   .home__line {
     background-size: contain;
   }
+
+  .feature__subtitle{
+    font-size: 12px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -1340,6 +1573,11 @@ img {
 .hover\:bg-black:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-brightRedLight:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 141 179 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-transparent:hover{
@@ -1396,12 +1634,28 @@ img {
     margin-top: 0px;
   }
 
+  .sm\:h-\[65px\]{
+    height: 65px;
+  }
+
   .sm\:w-\[250px\]{
     width: 250px;
   }
 
+  .sm\:w-\[300px\]{
+    width: 300px;
+  }
+
+  .sm\:w-\[30px\]{
+    width: 30px;
+  }
+
   .sm\:w-\[330px\]{
     width: 330px;
+  }
+
+  .sm\:w-\[400px\]{
+    width: 400px;
   }
 
   .sm\:w-\[45px\]{
@@ -1412,12 +1666,33 @@ img {
     width: 50px;
   }
 
-  .sm\:w-\[400px\]{
-    width: 400px;
+  .sm\:w-\[65px\]{
+    width: 65px;
+  }
+
+  .sm\:w-\[18px\]{
+    width: 18px;
+  }
+
+  .sm\:w-\[63px\]{
+    width: 63px;
+  }
+
+  .sm\:max-w-\[400px\]{
+    max-width: 400px;
   }
 
   .sm\:flex-row{
     flex-direction: row;
+  }
+
+  .sm\:py-\[20px\]{
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .sm\:pr-\[80px\]{
+    padding-right: 80px;
   }
 
   .sm\:text-\[15px\]{
@@ -1430,6 +1705,10 @@ img {
 
   .sm\:text-\[40px\]{
     font-size: 40px;
+  }
+
+  .sm\:text-\[13px\]{
+    font-size: 13px;
   }
 }
 
@@ -1446,6 +1725,11 @@ img {
     top: -12%;
   }
 
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:mb-0{
     margin-bottom: 0px;
   }
@@ -1458,6 +1742,14 @@ img {
     margin-bottom: 150px;
   }
 
+  .md\:mb-\[160px\]{
+    margin-bottom: 160px;
+  }
+
+  .md\:mb-\[30px\]{
+    margin-bottom: 30px;
+  }
+
   .md\:mr-5{
     margin-right: 1.25rem;
   }
@@ -1466,16 +1758,20 @@ img {
     margin-right: 30px;
   }
 
-  .md\:mb-\[100px\]{
-    margin-bottom: 100px;
+  .md\:ml-5{
+    margin-left: 1.25rem;
   }
 
-  .md\:mb-\[160px\]{
-    margin-bottom: 160px;
+  .md\:block{
+    display: block;
   }
 
   .md\:hidden{
     display: none;
+  }
+
+  .md\:h-\[30px\]{
+    height: 30px;
   }
 
   .md\:h-\[80px\]{
@@ -1486,8 +1782,32 @@ img {
     width: 150px;
   }
 
+  .md\:w-\[35px\]{
+    width: 35px;
+  }
+
+  .md\:w-\[550px\]{
+    width: 550px;
+  }
+
   .md\:w-\[80px\]{
     width: 80px;
+  }
+
+  .md\:max-w-\[350px\]{
+    max-width: 350px;
+  }
+
+  .md\:max-w-\[400px\]{
+    max-width: 400px;
+  }
+
+  .md\:max-w-\[420px\]{
+    max-width: 420px;
+  }
+
+  .md\:max-w-\[450px\]{
+    max-width: 450px;
   }
 
   .md\:translate-x-0{
@@ -1541,6 +1861,14 @@ img {
 }
 
 @media (min-width: 976px){
+  .lg\:mb-\[50px\]{
+    margin-bottom: 50px;
+  }
+
+  .lg\:mr-\[40px\]{
+    margin-right: 40px;
+  }
+
   .lg\:mr-\[50px\]{
     margin-right: 50px;
   }
@@ -1557,8 +1885,8 @@ img {
     width: 500px;
   }
 
-  .lg\:max-w-\[500px\]{
-    max-width: 500px;
+  .lg\:max-w-\[550px\]{
+    max-width: 550px;
   }
 
   .lg\:grid-cols-3{
@@ -1598,6 +1926,10 @@ img {
   .xl\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .xl\:max-w-\[650px\]{
+    max-width: 650px;
   }
 
   .xl\:flex-row{
